# acc2tax

./: .gitignore  Cargo.toml  TODO.md  acc2tax_test.py
src/: balance_and_shuffle.rs  fasta.rs  lib.rs  parser.rs
tests/: integration_test.rs
