[package]
name = "acc2tax"
version = "0.1.0"
authors = ["Joseph Guhlin <joseph.guhlin@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "acc2tax"
crate-type = ["cdylib", "rlib"]

[dependencies]
flate2 = { version = "1.0.14", features = ["zlib"], default-features = false }
serde = { version = "1.0.117", features = ["derive"] }
bincode = "1.3.1"
twox-hash = "1.6.0"
itertools = "0.9.0"
crossbeam = "0.8.0"
once_cell = "1.5.2"
bytelines = "2.2.2"
# mimalloc = { version = "0.1.11", default-features = false }
snap = "1"
rayon = "1.5.0"
indicatif = "0.15.0"
thincollections = "0.5.3"
rand = "0.7.3"
sled = "0.34.6"
zerocopy = "0.3.0"
byteorder = "1.3.4"

[dependencies.pyo3]
version = "0.12.4"
features = ["extension-module"]

[profile.dev]
# opt-level = 3

[profile.release]
opt-level = 3
lto = true
# debug = true # Uncomment when needing valgrind
