[package]
name = "acc2tax"
version = "0.1.0"
authors = ["Joseph Guhlin <joseph.guhlin@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "acc2tax"
crate-type = ["cdylib", "rlib"]

[dependencies]
flate2 = { version = "1.0.14", features = ["zlib"], default-features = false }
serde = { version = "1.0.118", features = ["derive"] }
bincode = "1.3.1"
itertools = "0.9.0"
crossbeam = "0.8.0"
once_cell = "1.5.2"
bytelines = "2.2.2"
snap = "1"
mimalloc = { version = "*", default-features = false }
indicatif = "0.15.0"
thincollections = "0.5.3"
rand = "0.7.3"
zerocopy = "0.3.0"
rayon = "1.5.0"
byteorder = "1.3.4"
hashbrown = { version = "0.9.1", features = ["nightly", "serde"] }

# rayon = "1.5.0"
# sled = { version = "0.34.6", features = ["zstd"] }


[dependencies.pyo3]
version = "0.12.4"
features = ["extension-module", "hashbrown"]

[dependencies.rocksdb]
version = "0.15.0"
default-features = false
features = ["snappy"]

[profile.dev]
# opt-level = 3

[profile.release]
opt-level = 3
lto = true
# debug = true # Uncomment when needing valgrind
