[package]
name = "acc2tax"
version = "0.1.0"
authors = ["Joseph Guhlin <joseph.guhlin@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "acc2tax"
crate-type = ["cdylib", "rlib"]

[dependencies]
flate2 = { version = "1.0.25", features = ["zlib"], default-features = false }
serde = { version = "1.0.152", features = ["derive"] }
bincode = "1.3.3"
itertools = "0.10.5"
crossbeam = "0.8.2"
once_cell = "1.17.0"
bytelines = "2.4.0"
mimalloc = { version = "*", default-features = false }
indicatif = "0.17.3"
thincollections = "0.5.3"
rand = "0.8.5"
zerocopy = {version = "0.6.1", features = ["alloc", "simd"]}
rayon = "1.6.1"
byteorder = "1.4.3"
zstd = "0.12.3"
redb = "0.15.0"


[dependencies.pyo3]
version = "0.18.1"
features = ["extension-module"]

[profile.dev]
# opt-level = 3

[profile.release]
opt-level = 3
lto = true
# debug = true # Uncomment when needing valgrind

[profile.test] # fixed
opt-level = 2